--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+         mavenCentral() // add repository
+       maven { url 'https://maven.google.com' }
+        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.6'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
