--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@
 buildscript {
     repositories {
         jcenter()
-         mavenCentral() // add repository
-       maven { url 'https://maven.google.com' }
+        
+       maven
+       { 
+       url 'https://maven.google.com' 
+       }
         
     }
     dependencies {
