--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,8 @@ buildscript {
     repositories {
         jcenter()
         google() 
-       maven
-       { 
-       url 'https://maven.google.com' 
-       }
+      mavenCentral() // add repository
+       maven { url 'https://maven.google.com' }
         
     }
     dependencies {
