--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     repositories {
-      
+      jcenter()
         google()      
           maven {
            url 'https://maven.google.com'   
