--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ buildscript {
     repositories {
       jcenter()
         google()      
-          maven {
-           url 'https://maven.google.com'   
-        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.6'
@@ -15,9 +13,11 @@ buildscript {
     }
 }
 
+    
 allprojects {
     repositories {
         jcenter()
+        google()  
     }
 }
 
