--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.+'
+       
+         classpath 'com.android.tools.build:gradle:0.4.3'
  
 
     }
